modified some general layout

--- a/source/_includes/custom/asides/found_on.html
+++ b/source/_includes/custom/asides/found_on.html
@@ -1,4 +1,4 @@
-<h2>found on</h2>
+<h2>Found On</h2>
 
 {% if site.facebook_user %}
 <a href="http://facebook.com/{{site.facebook_user}}" rel="tooltip" title="Facebook"><img class="social_icon" title="Facebook" alt="Facebook icon" src="{{ root_url }}/images/glyphicons_social_30_facebook.png"></a>
