--- a/source/_includes/custom/footer_widgets.html
+++ b/source/_includes/custom/footer_widgets.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="span3">
-    <h2>recent posts</h2>
+    <h2>Recent Posts</h2>
     <ul class="recent_posts">
       {% for post in site.posts limit: site.recent_posts %}
         <li>
@@ -8,7 +8,7 @@
         </li>
       {% endfor %}
     </ul>
-    <h2><a href="/blog/archives">archives</a></h2>
+    <h2><a href="/blog/archives">Archives</a></h2>
   </div>
   <div class="span3">
     {% include custom/asides/instagram.html %}
