--- a/source/_includes/asides/twitter.html
+++ b/source/_includes/asides/twitter.html
@@ -1,7 +1,7 @@
 {% if site.twitter_user %}
 <h2>Twitter</h2>
 <a href="https://twitter.com/{{ site.twitter_user }}" class="twitter-follow-button" data-show-count="true" data-lang="en">Follow @{{ site.twitter_user }}</a>
-<a class="twitter-timeline" href="https://twitter.com/bryanwbh" data-widget-id="405908705805234176">Tweets by @bryanwbh</a>
+<a class="twitter-timeline" href="https://twitter.com/SalsaKL" data-widget-id="412513838794174464">Tweets by @SalsaKL</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <!-- <div class="tweet" data-twitter-user="{{ site.twitter_user }}">
 </div> -->
